<?xml version="1.0"?>
<package format="2">
  <name>hololens_grasp</name>
  <version>0.0.0</version>
  <description>The hololens_grasp package</description>

  <maintainer email="jonetzko@informatik.uni-hamburg.de">Yannick Jonetzko</maintainer>
  <maintainer email="krupke@informatik.uni-hamburg.de">Dennis Krupke</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
